# infiniter

./: README.md  main.py  pyproject.toml
src/infiniter/: Generator.py  __init__.py  count.py  iter.py
src/tests/: test_main.py
