[project]
name = "infiniter"
version = "0.2.1"
description = "Improved python iterators"
readme = "README.md"
authors = [
    { name = "Michael Savage", email = "savagemichael1707@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
